# Build3D

./: .gitignore  .gitmodules  A3DC_1.0_Fiji.py  CMakeLists.txt  LICENSE  Pipfile  a3-dc-editor.bat  a3-dc.bat  a3-dc.pro  a3dc.pro  app-starter.bat  appveyor.yml  build.bat  imageProcessing.py  imageProcessing_temp.py  readme.md  resources.qrc  todo.md  win-install.iss
src/: .qmake.conf  CMakeLists.txt  VolumeMaterial.cpp  VolumeMaterial.h  benchpress.pri  catch.pri  common.pri  core.pri  crashpad.pri  libics.pri  main.cpp  pybind11.pri  volumetric.cpp  volumetric.h
src/app/: BackendInput.cpp  BackendInput.h  BackendModule.cpp  BackendModule.h  BackendOutput.cpp  BackendOutput.h  BackendParameter.cpp  BackendParameter.h  BackendStore.cpp  BackendStore.h  BackendStoreItem.cpp  BackendStoreItem.h  GlobalSettings.cpp  GlobalSettings.h  IcsDataSourceModule.cpp  IcsDataSourceModule.h  LogCollector.cpp  LogCollector.h  ModulePlatformBackend.cpp  ModulePlatformBackend.h  NodePlatform.cpp  NodePlatform.h  NodePlatformBackend.cpp  NodePlatformBackend.h  OutputInterfaceModules.cpp  OutputInterfaceModules.hpp  OutputInterfaceModules.ipp  ParameterInterfaceModules.cpp  ParameterInterfaceModules.hpp  ParameterInterfaceModules.ipp  TurnTableCameraController.cpp  TurnTableCameraController.h  UltimateSinkModule.cpp  UltimateSinkModule.h  VolumeData.cpp  VolumeData.h  VolumeDataCollection.cpp  VolumeDataCollection.h  VolumeTexture.cpp  VolumeTexture.h  (+3 more)
src/app/modules/: __init__.py  a3dc_interface.py  a3dc_interface_utils.py  a3dc_utils.py  readme.txt  untitled1.py
src/app/modules/ICS/: module_Source_Ics.py
src/app/modules/__archive/: Load_Tiff.json
src/app/modules/a3dc_modules/: __init__.py  module_analyze_0.py  module_analyze_1.py  module_analyze_2.py  module_analyze_3.py  module_analyze_4.py  module_apply_filter.py  module_colocalization_2.py  module_save_data_csv.py  module_save_data_xlsx.py  module_save_image.py  module_tag_image.py  module_threshold_Adaptive_Gaussian.py  module_threshold_Adaptive_Mean.py  module_threshold_Huang.py  module_threshold_IsoData.py  module_threshold_KittlerIllingworth.py  module_threshold_Li.py  module_threshold_Manual.py  module_threshold_MaxEntropy.py  module_threshold_Moments.py  module_threshold_Otsu.py  module_threshold_RenyiEntropy.py  module_threshold_Shanbhag.py  module_threshold_Triangle.py  module_threshold_Yen.py  proto_threshold.py
src/app/modules/alternative/: module_Analyze.py  module_Colocalize.py  module_Results.py  module_Source.py  module_Threshold.py
src/app/modules/alternative_ics/: module_Analyze.py  module_Threshold.py
src/app/modules/alternative_tiff/: module_Analyze.py  module_Colocalize.py  module_Results.py  module_Source.py  module_Source_1Ch.py  module_Threshold.py
src/app/modules/examples/: module_02_provider_demo.py  module_03_consumer_demo.py  module_hello_batch.py  module_hello_module.py  module_hello_parameters_module.py  module_numbers.py  module_parameters.py  module_parameters_2.py  module_random_labels.py  module_spheres.py  module_volume_generator.py  module_volume_manipulator.py
src/app/modules/experimental/: module_binarize.py  module_channel_selector.py  module_label_differences.py  module_label_objects.py  module_labeled_intersection.py  module_read_ome_tiff.py  (+1 more)
src/app/qml/: main.qml
src/app/scripts/: a3dc_utils.py  autoThresholdOtsu.py  imageProcessing.py  readme.txt  test_generalpytype_sink_module.py  test_module.py  test_sine_module.py  test_threshold_module.py
src/benchmark/: benchmark.cpp  benchmark.html  benchmark.pro  collect_benchmark_info.py  perf.csv  show_benchmark_graph.py
src/core/: IcsFile.cpp  IcsFile.h  MultiDimFile.cpp  MultiDimFile.h  NodeBase.h  VolumeData.h  core.pro  volumetric.h
src/core/compute_layer/: Buffer.h
src/core/compute_platform/: ComputeModule.cpp  ComputeModule.h  ComputeNode.cpp  ComputeNode.h  ComputePlatform.cpp  ComputePlatform.h  ModuleContext.cpp  ModuleContext.h  port_utils.hpp  port_utils.ipp  ports.cpp  ports.h  ports.hpp  ports.ipp
src/core/directed_acyclic_graph/: Graph.cpp  Graph.h  Node.cpp  Node.h  types.h
src/core/forward_network/: ForwardNetwork.cpp  ForwardNetwork.h  Group.cpp  Group.h  Node.cpp  Node.h
src/core/high_platform/: PythonComputeModule.cpp  PythonComputeModule.h
src/core/io_utils/: IcsAdapter.cpp  IcsAdapter.h
src/core/multidim_image_platform/: MultiDimImage.cpp  MultiDimImage.hpp  MultiDimImage.ipp
src/lib/libics/: libics.pro
src/nodes/: cpptest.py
src/qml/: CameraController.qml  SceneRoot.qml  SideBar.qml  SimpleMaterial.qml  Viewer.qml  VolumetricMaterial.qml  main.qml  main.qml.bk
src/test/: compute_layer.cpp  compute_platform_test.cpp  compute_platform_test_helper.hpp  directed_acyclic_graph_test.cpp  forward_network.cpp  high_platform_test.cpp  high_platform_test_helper.hpp  io_utils_test.cpp  multidim_image_platform_test.cpp  nodes.cpp  run_test.sh  scale_test_gen.py  test-VolumeData.cpp  test.pro
src/util/: benchpress.hpp  cxxopts.hpp  version.cpp  version.h
(+215 files in other folders)
